--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Falling Plants</title>
+    
+    <link rel="stylesheet" href="style.css">
+    
+</head>
+<body>
+
 <div class="transparent-box"></div>
 <!-- Navbar --> 
 <div class="nav-group">
@@ -74,3 +84,4 @@ Sunflower
 <!-- Source --> 
 <div
 </body>
+    </html>
