--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
   <title>Falling Plants</title>
     
-    <link rel="stylesheet" href="style.css">
-    
-</head>
+
+  <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+
+      <link rel="stylesheet" href="style.css">
+  <script src="script.js">
+  </head>
 <body>
 
 <div class="transparent-box"></div>
@@ -54,28 +60,24 @@
   <label class="content" for="card-1">
     <h3 class="card-title">
       Baby Blue-eyes
-      <span class="subtitle">Quercus shumardii</span>
     </h3>
   </label>
   <input class="radio" type="radio" name="card" id="card-2" />
   <label class="content" for="card-2">
     <h3 class="card-title">
 Oak Sappling
-      <span class="subtitle">Quercus shumardii</span>
     </h3>
   </label>
   <input class="radio" type="radio" name="card" id="card-3" />
   <label class="content" for="card-3">
     <h3 class="card-title">
 Sunflower
-      <span class="subtitle">@quentindrphotography</span>
     </h3>
   </label>
   <input class="radio" type="radio" name="card" id="card-4" />
   <label class="content" for="card-4">
     <h3 class="card-title">
       Prickle Berry
-      <span class="subtitle">SOURCE</span>
     </h3>
   </label>
 </div>
